# ed-flow-2023

./: .gitignore  allData.csv  calculated_KPIs_alerts.csv  calculated_KPIs_alerts.xlsx  calculated_KPIs_critical_alerts.csv  calculated_KPIs_critical_alerts.xlsx  chronos-requirements.txt  current.csv  current.xlsx  main.py  nprequirements.txt  pyproject.toml  requirements-jgh.txt  requirements.txt  total_tbs.xlsx  weather-requirements.txt
alert_examples/: total_tbs.json
automation/: ed_flow_automation_check_runbook.md
data/: 23-11-22.csv
docs/: 2026-05-10_oncall_impact_analysis.md
notebooks/: 25-02-11-.ipynb  25-02-16.ipynb  25-02-19.ipynb  25-11-09.ipynb  25-11-14.ipynb  25-11-25.ipynb  alerts.csv  alerts.ipynb  alerts.xlsx  alerts2.ipynb  allData.csv  anomaly_detection.ipynb  anomaly_detection_ranges.csv  calculated_KPIs.ipynb  calculated_KPIs_alerts.csv  calculated_KPIs_alerts.xlsx  calculated_KPIs_critical_alerts.csv  calculated_KPIs_critical_alerts.xlsx  chronos-benchmarking.ipynb  concat.ipynb  constants.py  current.csv  dailyvisits.ipynb  dropbox.ipynb  get_current.ipynb  llmprep.ipynb  ramq_holidays.csv  report.ipynb  shiftadmin.ipynb  test.ipynb  total_tbs.xlsx  total_tbs_forecast.xlsx  total_tbs_np.ipynb  utils.py
scripts/: alerts.py  anomaly_detection.py  calculated_KPIs_alerts.csv  calculated_KPIs_alerts.xlsx  calculated_KPIs_critical_alerts.xlsx  calculated_kpis.py  chronos.py  chronos_forecast.py  chronos_forecast_v2.py  constants.py  forecast_oncall_need.py  get_current.py  neuralprophet_safe_load.py  run_ed_flow_update.sh  run_forecast_np.py  (+6 more)
(+46 files in other folders)
