[project]
name = "ed-flow-2023"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "camelot-py[base]>=1.0.9",
    "chronos-forecasting>=2.0",
    "dropbox>=12.0.2",
    "holidays>=0.88",
    "matplotlib>=3.10.8",
    "opencv-python-headless>=4.12.0.88",
    "pandas[pyarrow]>=2.3.3",
    "prophet>=1.2.1",
    "pymsteams>=0.2.5",
    "pypdf2<3.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.9",
]
